<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 欢迎页面 -->
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_confirm_login">Confirm Login</string>
    <string name="button_cancel_login">Cancel Login</string>
    <string name="button_confirm_signup">Confirm Sign Up</string>
    <string name="button_cancel_signup" translatable="false">Cancel Sign Up</string>
    <string name="edit_username" translatable="false">username</string>
    <string name="edit_password" translatable="false">password</string>

    <!--Application Str-->
    <string name="app_name">GreekMyth</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="seek_bar" translatable="false">SeekBar Src</string>
    <string name="action_settings">Settings</string>


    <string name="seekbar_info" translatable="false">A:[progressDrawable --- layer-list 使用item:drawable] \n
        B:[progressDrawable --- layer-list 使用item:shape] \n
        C:[自定义Style --- progressDrawable(a)]</string>

    <string name="add">增加</string>
    <string name="reduce" translatable="false">减少</string>
    <string name="reset" translatable="false">重置</string>
    <string name="clear">清除</string>
    <string name="canvas_seekbar_info" translatable="false">绘图测试</string>
    <string name="checkSdCard" translatable="false">检测SD卡</string>
    <string name="getDefaultFilePath" translatable="false">获取默认的文件存放路径</string>
    <string name="inputData" translatable="false">请输入需要保存的数据</string>
    <string name="desc" translatable="false">把输入的数据保存在Sd卡中或者手机内存中，简单的SD卡数据读写以及文件读写，
        需要加权限:创建与删除文件权限 MOUNT_UNMOUNT_FILESYSTEMS;向SDCard写入数据权限:WRITE_EXTERNAL_STORAGE
    </string>
    <string name="save_data" translatable="false">保存</string>
    <string name="underlinSpanStr" translatable="false">UnderlinSpan</string>

    <!-- 百度地图 Str-->
    <string name="address">地址:</string>
    <string name="accountinfo">账户信息:</string>
    <string name="Common_Map">普通地图</string>
    <string name="Site_Map" translatable="false">卫星地图</string>
    <string name="Map_Traffic" translatable="false">实时交通（off）</string>


    <string name="startIntentServer" translatable="false">启动IntentService</string>

    <!-- service_strings -->
    <string name="alarm_service_started" translatable="false">闹钟服务被启动，运行中.......</string>
    <string name="alarm_service_finished" translatable="false">闹钟服务被停止运行</string>
    <string name="alarm_service_label" translatable="false">闹钟服务例子</string>
    <string name="alarm_service">This demonstrates how to schedule a repeating
        alarm that will initiate a long-lived operation through a service.</string>
    <string name="start_alarm_service" translatable="false">Start Alarm Service</string>
    <string name="stop_alarm_service" translatable="false">Stop Alarm Service</string>

    <string name="popwin" translatable="false">弹出PopUp</string>



    <!-- animation_viewfliper -->
    <string name="animationviewfliper_text1" translatable="false">有一个古老的故事</string>
    <string name="animationviewfliper_text2" translatable="false">----从前有个庙</string>
    <string name="animationviewfliper_text3" translatable="false">庙里有个老和尚和一个小和尚</string>
    <string name="animationviewfliper_text4" translatable="false">他们没老婆!!</string>
    <string name="animationviewfliper_text5" translatable="false">Interpolators</string>
    <string name="animationviewfliper_tips" translatable="false">选择一个动画</string>

    <string name="create">create</string>
    <string name="delete">delete</string>

    <string name="lorem_ipsum" translatable="false">
        <![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]>
    </string>

    <string name="lorem_ipsum_change" translatable="false">
        <![CDATA[Mauris et magna ut erat.]]>
    </string>

    <string name="touch_voice" translatable="false">触摸发声</string>
    <string name="change_pic" translatable="false">切换图片</string>
    <string name="crimtitle">Enter a title for the crime</string>
    <string name="aidl_addData">Add Data To Service</string>
    <string name="aidl_getData">Get Data From Service</string>

    <string name="bkg_poster">海报背景图</string>
    <string name="label_desc">Test Text</string>
    <string name="default_buttom_label">8月6</string>
    <string name="win10" translatable="false">简单环形进度和win10加载圈</string>
    <string name="song_hourse" translatable="false">歌词跑马灯</string>
    <string name="progress_with_number" translatable="false">带数字的水平和环形Progress</string>
    <string name="btn_collect" translatable="false">收藏按钮</string>

    <!--播放器提示-->
    <string name="full_play">全屏</string>
    <string name="player_flow_tips" translatable="false">正在使用流量播放</string>


    <!--日期相关-->
    <string name="today" translatable="false">今天</string>
    <string name="yesterday" translatable="false">昨天</string>
    <string name="tomorrow" translatable="false">明天</string>
    <string name="guess_you_lisk">猜你喜欢</string>
    <string name="player_area" translatable="false">播放器区域</string>
    <string name="content_desc_are" translatable="false">影片内容描述区域</string>
    <string name="episode" translatable="false">剧集</string>
    <string name="video_desc" translatable="false">简介</string>
    <string name="gusture_tip_icon" translatable="false">手势展示图标</string>

    <!--点播界面  被格式化的参数索引%1$s和%2$s分别表示第一位和第二位占位符，$s表示是字符串 -->
    <string name="txt_desc" translatable="false">简介</string>
    <string name="txt_episode" translatable="false">剧集</string>
    <string name="txt_guess_like" translatable="false">猜你喜欢</string>
    <string name="txt_variety_content" translatable="false">第%1$s期: %2$s</string>
    <string name="txt_variety_new_episode" translatable="false">更新至%1$s期</string>
    <string name="txt_tv_new_episode" translatable="false">更新至%1$s集</string>
    <string name="txt_variety_new" translatable="false">更新至%1$s期 / %2$s期全</string>
    <string name="txt_tv_new" translatable="false">更新至%1$s集 / %2$s集全</string>
    <string name="txt_actor" translatable="false">主演:%1$s</string>
    <string name="txt_director" translatable="false">导演:%1$s</string>
    <string name="txt_detail" translatable="false">简介:%1$s </string>
    <string name="txt_test_int" translatable="false">评分:%1$d </string>
    <string name="pls_input_name" translatable="false">请输入用户名</string>
    <string name="login" translatable="false">登录</string>
    <string name="user_error_tips" translatable="false">User Name Error!</string>
    <string name="bottom_demo">Demo学习</string>
    <string name="fuli">福利</string>
    <string name="no_use">暂未开发</string>
    <string name="tips_data_empty">数据为空</string>
    <string name="content_view_desc">页面内容显示页面根View</string>
    <string name="networl_error">网络错误</string>

    <!--MagicIndicatorDemo相关-->
    <string name="scrollable_tab" translatable="false">Scrollable tab</string>
    <string name="fixed_tab" translatable="false">Fixed tab</string>
    <string name="dynamic_tab" translatable="false">Dynamic tab</string>
    <string name="no_tab_only_indicator" translatable="false">No tab, only indicator</string>
    <string name="work_with_fragment_container" translatable="false">Work with fragment container</string>
    <string name="tab_with_badge_view" translatable="false">Tab with badge view</string>
    <string name="custom_navigator" translatable="false">Custom navigator</string>
    <string name="random_page" translatable="false">Random page</string>
    <string name="tab_with_custom_layout" translatable="false">Load custom layout</string>


<!--    练习绘制页面-->
    <string name="title_1" translatable="false">drawColor()</string>
    <string name="title_2" translatable="false">drawCircle()</string>
    <string name="title_3" translatable="false">drawRect()</string>
    <string name="title_4" translatable="false">drawPoint()</string>
    <string name="title_5" translatable="false">drawOval()</string>
    <string name="title_6" translatable="false">drawLine()</string>
    <string name="title_7" translatable="false">drawRoundRect()</string>
    <string name="title_8" translatable="false">drawArc()</string>
    <string name="title_9" translatable="false">drawPath()</string>
    <string name="title_10" translatable="false">直方图()</string>
    <string name="title_11" translatable="false">饼图()</string>

    <!--Glide 效果测试页面-->
    <string name="glide_circle" translatable="false">Glide预览</string>
    <string name="glide_round" translatable="false">round</string>
    <string name="glide_blur" translatable="false">blur</string>
    <string name="glide_round_with_border" translatable="false">round_with_border</string>
    <string name="glide_load_fade" translatable="false">load_fade</string>
</resources>
