<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:id="@+id/show_text"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkSdCard"
            android:id="@+id/sd_button"
            android:layout_below="@+id/show_text" android:layout_alignParentLeft="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getDefaultFilePath"
            android:id="@+id/default_filepath_btn"
            android:layout_below="@+id/show_text"
            android:layout_toRightOf="@+id/sd_button"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/file_edittext"
            android:hint="@string/inputData"
              android:layout_below="@+id/sd_button" android:layout_alignParentLeft="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:id="@+id/save_data"
            android:layout_below="@+id/file_edittext" android:layout_alignParentLeft="true"/>

</RelativeLayout>