<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nativeWidgets.NativeProgressBar"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ProgressBar
            android:id="@+id/horiz"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:max="200"
            android:progress="50"
            android:progressDrawable="@drawable/progress_bar"
            android:secondaryProgress="80" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reduce" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="#00F00F"/>


        <Button
            android:id="@+id/clear"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <Button
            android:id="@+id/alertdialog"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:text="弹出对话框" />

    </LinearLayout>

</FrameLayout>

